RESOLVED FIXED103025
Web Inspector: NMI add instrumentation to DynamicNodeList classes hierarchy.
https://bugs.webkit.org/show_bug.cgi?id=103025
Summary Web Inspector: NMI add instrumentation to DynamicNodeList classes hierarchy.
Ilya Tikhonovsky
Reported 2012-11-21 23:21:38 PST
RNiwa changed pointer type in NodeRareData::NodeListAtomicNameCacheMap from the topmost DynamicSubtreeNodeList to the base DynamicNodeListCacheBase at r135429. As a result we got non zero count of pointers that don't match with tcmalloc data, because DynamicNodeList uses multiple inheritance. It could be fixed with help of explicit native memory instrumentation for DynamicNodeList class hierarchy. Patch to follow.
Attachments
Patch (5.00 KB, patch)
2012-11-21 23:31 PST, Ilya Tikhonovsky
yurys: review+
Ilya Tikhonovsky
Comment 1 2012-11-21 23:31:21 PST
Ilya Tikhonovsky
Comment 2 2012-11-22 01:25:20 PST
Ryosuke Niwa
Comment 3 2012-11-22 16:44:59 PST
This patch regressed the memory usage of NodeList by introducing another vtable pointer in each NodeList and HTMLCollection.
Ryosuke Niwa
Comment 4 2012-11-22 16:49:02 PST
WebKit Review Bot
Comment 5 2012-11-22 21:36:49 PST
Re-opened since this is blocked by bug 103099
Alexey Proskuryakov
Comment 6 2012-11-22 23:38:10 PST
Looks like the plan is to fix without reverting, marking FIXED again.
Note You need to log in before you can comment on or make changes to this bug.