Web Inspector: NMI add instrumentation to DynamicNodeList classes hierarchy. https://bugs.webkit.org/show_bug.cgi?id=103025

Reviewed by Yury Semikhatsky.

RNiwa changed pointer type in NodeRareData::NodeListAtomicNameCacheMap from the topmost
DynamicSubtreeNodeList to the base DynamicNodeListCacheBase at r135429.
As a result we got non zero count of pointers that don't match with tcmalloc data,
because DynamicNodeList uses multiple inheritance.
It could be fixed with help of explicit native memory instrumentation for DynamicNodeList class hierarchy.

No change in behavior, so no new tests.

* dom/Document.cpp: drive by fix.
(WebCore::Document::reportMemoryUsage):
* dom/DynamicNodeList.cpp:
(WebCore::DynamicNodeListCacheBase::reportMemoryUsage):
(WebCore):
(WebCore::DynamicNodeList::reportMemoryUsage):
(WebCore::DynamicSubtreeNodeList::reportMemoryUsage):
* dom/DynamicNodeList.h:
(WebCore::DynamicNodeListCacheBase::~DynamicNodeListCacheBase):
(DynamicNodeListCacheBase):
(DynamicNodeList):
(DynamicSubtreeNodeList):

Canonical link: https://commits.webkit.org/121154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135493 268f45cc-cd09-0410-ab3c-d52691b4dbfc