Source/WebCore/dom/DynamicNodeList.cpp
@@ -28,6 +28,7 @@
 #include "HTMLCollection.h"
 #include "HTMLPropertiesCollection.h"
 #include "PropertyNodeList.h"
+#include "WebCoreMemoryInstrumentation.h"
 
 namespace WebCore {
 
@@ -77,6 +78,26 @@ void DynamicNodeListCacheBase::invalidateIdNameCacheMaps() const
     const HTMLCollectionCacheBase* cacheBase = static_cast<const HTMLCollectionCacheBase*>(this);
     cacheBase->m_idCache.clear();
     cacheBase->m_nameCache.clear();
+}
+
+void DynamicNodeListCacheBase::reportMemoryUsage(MemoryObjectInfo* memoryObjectInfo) const
+{
+    MemoryClassInfo info(memoryObjectInfo, this, WebCoreMemoryTypes::DOM);
+    info.addMember(m_ownerNode);
+    info.addWeakPointer(m_cachedItem);
+}
+
+void DynamicNodeList::reportMemoryUsage(MemoryObjectInfo* memoryObjectInfo) const
+{
+    MemoryClassInfo info(memoryObjectInfo, this, WebCoreMemoryTypes::DOM);
+    NodeList::reportMemoryUsage(memoryObjectInfo);
+    DynamicNodeListCacheBase::reportMemoryUsage(memoryObjectInfo);
+}
+
+void DynamicSubtreeNodeList::reportMemoryUsage(MemoryObjectInfo* memoryObjectInfo) const
+{
+    MemoryClassInfo info(memoryObjectInfo, this, WebCoreMemoryTypes::DOM);
+    DynamicNodeList::reportMemoryUsage(memoryObjectInfo);
 }
 
 unsigned DynamicNodeList::length() const
